<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhenWhereHowActionBar</string>
    <string name="action_location">Location</string>
    
    <string name="whenwherehow">WhenWhereHowActionBar</string>
    <string name="network_type">Network Type</string>
    <string name="name_of_network">Name of Network</string>
    <string name="network_information">Network Information</string>
    <string name="location_information">Location Information</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="get_location">Get Location</string>
    <string name="provider_type">Provider Type</string>
    <string name="accuracy_in_meters">Accuracy in Meters</string>
    <string name="title_activity_movie_player">Movie Player</string>
    <string name="play_video">Play Video</string>
    <string name="launch_player_activity">Player</string>
    <string name="movie_player">Movie Player</string>
    <string name="sensor_info">Sensor Info</string>
    <string name="launch_sensor_activity">Sensor</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="accelerometer_z_axis_in_m_sec2">Accelerometer Z Axis in m/sec2</string>
    <string name="accelerometer_y_axis_in_m_sec2">Accelerometer Y Axis in m/sec2</string>
    <string name="accelerometer_x_axis_in_m_sec2">Accelerometer X Axis in m/sec2</string>
    <string name="proximity_in_cm_">Proximity in cm:</string>
    <string name="sensor_information">Sensor Information</string>
    <string name="unavailable">Unavailable</string>
    <string name="temp_in_celcius">Temp in Celsius</string>
    <string name="light_in_lux">Light in Lux</string>
    <string name="action_video_player">Video</string>
    <string name="action_sensors">Sensors</string>
    <string name="action_search">Search</string>

</resources>
