<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_orange_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
        
    
    <TextView 
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/whenwherehow"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="left"
	        android:layout_marginTop="20dip"
	        android:text="@string/network_information"
	        android:textAppearance="?android:attr/textAppearanceLarge"/>
	    
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		        
			    <TextView 
			        android:id="@+id/networkStatus"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/network_type"/>
			    
			    <TextView 
			        android:id="@+id/networkType"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="right"
			        android:layout_weight="1"
		        	android:text="@string/unavailable"
			        android:textColor="@android:color/holo_green_light"/>
			    
		    </LinearLayout>
		    
		    
		    <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">
		        
			    <TextView 
			        android:id="@+id/network"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/name_of_network"/>
			    
			    <TextView 
			        android:id="@+id/networkName"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="right"
			        android:layout_weight="1"
		        	android:text="@string/unavailable"
			        android:textColor="@android:color/holo_green_light"/>
			    
		    </LinearLayout>
	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dip"
        android:text="@string/location_information"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
	
		<Spinner  
	        android:id="@+id/spinner"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
		<Button 
		    android:id="@+id/locationButton"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/get_location"/>
		    
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal">
			        
				    <TextView 
				        android:id="@+id/provider"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_weight="1"
				        android:text="@string/provider_type"/>
				    
				    <TextView 
				        android:id="@+id/providerType"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
			        	android:layout_gravity="right"
				        android:layout_weight="1"
		        		android:text="@string/unavailable"
				        android:textColor="@android:color/holo_green_light"/>
				    
			    </LinearLayout>
			    
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal">
			        
				    <TextView 
				        android:id="@+id/longitude"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_weight="1"
				        android:text="@string/longitude"/>
				    
				    <TextView 
				        android:id="@+id/longCoord"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
			        	android:layout_gravity="right"
				        android:layout_weight="1"
		        		android:text="@string/unavailable"
				        android:textColor="@android:color/holo_green_light"/>
				    
			    </LinearLayout>
			    
			    
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal">
			        
				    <TextView 
				        android:id="@+id/latitude"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_weight="1"
				        android:text="@string/latitude"/>
				    
				    <TextView 
				        android:id="@+id/latCoord"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
			        	android:layout_gravity="right"
				        android:layout_weight="1"
		        		android:text="@string/unavailable"
				        android:textColor="@android:color/holo_green_light"/>
				    
			    </LinearLayout>
			    
			    <LinearLayout 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal">
			        
				    <TextView 
				        android:id="@+id/accuracy"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_weight="1"
				        android:text="@string/accuracy_in_meters"/>
				    
				    <TextView 
				        android:id="@+id/accuracyMeters"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
			        	android:layout_gravity="right"
				        android:layout_weight="1"
		        		android:text="@string/unavailable"
				        android:textColor="@android:color/holo_green_light"/>
				    
			    </LinearLayout>
	
	
</LinearLayout>
